--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.telstra.codechallenge</groupId>
     <artifactId>parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.7.12</version>
     <packaging>pom</packaging>
     <name>spring-boot-code-challenge</name>
     <description>A project to use for code challenges</description>
