--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
 management.endpoints.web.exposure.include=health,info
-zero.followers.url = https://api.github.com/search/users?q=followers:0&sort=joined&order=asc
+gitHub.base.url = https://api.github.com/search
+zero.followers.url =/users?q=followers:0&sort=joined&order=asc
 
