Revert "Committed changes"
This reverts commit 5b10a8d885259d7de890f39503b1a78647e52173.

--- a/microservice/src/main/resources/application.properties
+++ b/microservice/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8080
 management.endpoints.web.exposure.include=health,info
-gitHub.base.url = https://api.github.com/search
-zero.followers.url =/users?q=followers:0&sort=joined&order=asc
+zero.followers.url = https://api.github.com/search/users?q=followers:0&sort=joined&order=asc
 
